compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__duplicate_name_for_variables_used_in_guards_shadowing_outer_name.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn wibble() {\n  let n = 1\n  let a = case 1337 {\n    n if n == 1347 -> n\n    _ -> n\n  }\n  let b = case 1337 {\n    n -> Nil\n  }\n}"
---
----- SOURCE CODE

pub fn wibble() {
  let n = 1
  let a = case 1337 {
    n if n == 1347 -> n
    _ -> n
  }
  let b = case 1337 {
    n -> Nil
  }
}

----- COMPILED JAVASCRIPT
export function wibble() {
  let n = 1;
  let _block;
  let $ = 1337;
  {
    let n$1 = $;
    if (n$1 === 1347) {
      _block = $;
    } else {
      _block = n;
    }
  }
  let a = _block;
  let _block$1;
  let $1 = 1337;
  let n$1 = $1;
  _block$1 = undefined;
  let b = _block$1;
  return b;
}
