compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__empty_string_with_alias.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn main(x) {\n  case x {\n    <<\"\" as a:utf8>> -> a\n    _ -> \"b\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    <<"" as a:utf8>> -> a
    _ -> "b"
  }
}


----- COMPILED JAVASCRIPT
export function main(x) {
  if (x.bitSize === 0) {
    let a = "";
    return a;
  } else {
    return "b";
  }
}
