compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__guard_binding_in_directly_matching_case_is_not_redeclared.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn go(x) {\n  case x {\n    #(_, b) if b == 2 -> b\n    #(_, b) -> b\n  }\n  let b = 5\n  b\n}"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    #(_, b) if b == 2 -> b
    #(_, b) -> b
  }
  let b = 5
  b
}

----- COMPILED JAVASCRIPT
export function go(x) {
  let b = x[1];
  if (b === 2) {
    b;
  } else {
    let b = x[1];
    b;
  }
  let b = 5;
  return b;
}
