compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__match_on_empty_bit_array_string.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn main(x) {\n  case x {\n    <<\"\":utf8>> -> \"a\"\n    _ -> \"b\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    <<"":utf8>> -> "a"
    _ -> "b"
  }
}


----- COMPILED JAVASCRIPT
export function main(x) {
  if (x.bitSize === 0) {
    return "a";
  } else {
    return "b";
  }
}
